tests/NormalTests/paczka1/small_fuzzy/15911171.err
Error in line 1: 93IhiS0 A534 26,2
Error in line 6: A799 A799 10,9
Error in line 9: A799 A916 1,4
